# quantumhive-algorithmictrading

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXTO_AGENTES_backup_2c.md  CONTEXTO_BACKUP.md  CONTEXTO_MACRO2_OPERACIONES_backup_2d.md  CONTEXTO_MACRO4_FABRICA.md  CONTEXTO_MACRO4_FABRICA_backup_2d.md  CONTEXTO_MACRO5_INNOVACION.md  CONTEXTO_MACRO7_COLMENA_backup_2d.md  CONTEXTO_MACRO8_APPS.md  CONTEXTO_TECNICO.md  ESTRUCTURA_ORGANIZACIONAL.md  GUIA_ACTIVAR_WHATSAPP.md  HANDOFF_NUEVA_VM.md  INVENTARIO_TOTAL_QH.md  MEMORIA_MANUAL.md  PLAN_QUANTUMHIVE_TOWN.md  QUANTUM_ESTADO_MAESTRO.md  RESUMEN_SESION.md  WORKFLOW.md  accesos_credenciales.db  agi_memoria_telegram.db  check_env.py  consulta_forense_bot_atlas.py  debug_obs.py  estado_actual.md  estructura_proyecto.txt  fix_dashboard.py  generate_tileset.py  package-lock.json  pyproject.toml  resultados_final.txt  temp_configurar_groq_render.py  test_binance_conexion.py  test_entorno_unificado.py  test_imports_nuevos.py  test_okx_conexion.py
.windsurf/: cascade-system-prompt.md  swe-1-6-memory.json
CONTEXTOS_GENERALES/: CONTEXTO_AGENTES.md  CONTEXTO_MACRO11_COMUNICACIONES.md  CONTEXTO_MACRO1_TRADING.md  CONTEXTO_MACRO2_OPERACIONES.md  CONTEXTO_MACRO3_MARKETING.md  CONTEXTO_MACRO3_MARKETING_backup_2c.md  CONTEXTO_MAESTRO.md  CONTEXTO_MAESTRO_backup_2d.md  ESTRATEGIA_LLM_ROTATIVAS.md  ESTRUCTURA_COLMENA_VISUAL.md  MEMORIA_PROYECTO.md  QUANTUMHIVE_ARQUITECTURA.md  SYSTEM_PROMPT_CEO2_CHATGPT_VISUALES.md
agentes/: ny_predator_v1.mq5
agi_memoria_github/: banco_decisiones.md  contexto_qh.md  perfil_sergio.md  sergio_profile.json  vision_ceo.md
automatizacion/: main_autonomo.py
config/: __init__.py
convex/: init.ts
(+349 files in other folders)
